Fix the issues 02
Fix the issues 02
